[project]
name = "iptables-rules"
version = "1"
requires-python = ">=3.12"
dependencies = [
    "python-iptables",
    "ipython ~= 9.4.0",
    "requests ~= 2.32.5",
]

[tool.uv.sources]
python-iptables = { path = "libs/python-iptables", editable = true }

[tool.pyright]
extraPaths = ["libs/python-iptables"]
typeCheckingMode = "standard"
